hw9-serialization Исправление замечаний по результатам ревью